Fix spacing on story header tools links

--- a/static/less/viewer.less
+++ b/static/less/viewer.less
@@ -156,6 +156,7 @@
       text-decoration: none;
       display: inline-block;
       margin-left: 4px;
+      margin-right: 12px;
 
       &:last-of-type {
         margin-right: 0;
